# bimanual-catching-coman

./: README.md
ball/: CMakeLists.txt
ball/include/: ball.h
ball/src/: ball.cpp
ball_motion_estimation/: CMakeLists.txt  package.xml
ball_motion_estimation/include/ball_motion_estimation/: ball_motion_estimation.h
ball_motion_estimation/src/: ball_motion_estimation.cpp
bimanual_catching_package/: CMakeLists.txt  CMakeLists.txt~  package.xml
bimanual_catching_package/bimanual_catching_module/include/: bimanual_catching_module.h
bimanual_catching_package/bimanual_catching_module/src/: bimanual_catching_module.cpp
bimanual_catching_package/config/: bimanual_catching_module.xml  bimanual_catching_module.xml~
bimanual_ds/include/: bimanual_ds.h
bimanual_ds/src/: bimanual_ds.cpp
orocos_ros_interface/: CMakeLists.txt  README.md  bimanual-catching-coman.world  orocos_ros_interface.ops  package.xml  settings.txt  test_orocos.ops.save
orocos_ros_interface/include/: orocos_ros_interface.hpp
orocos_ros_interface/include/test_orocos/: test_orocos-types.hpp
orocos_ros_interface/src/: orocos_ros_interface.cpp
using_markers/src/: basic_shapes.cpp
