<package>
  <name>orocos_ros_interface</name>
  <version>1.0.0</version>
  <description>This package contains the components of the test_orocos package</description>
  <maintainer email="unknown@maintainer.com">Unknown Author</maintainer>

  <license>Unknown</license>

  <url type="website"></url>
  <!-- <url type="bugtracker"></url> -->

  <author>Unknown Author</author>
  <buildtool_depend>catkin</buildtool_depend>


  <build_depend>rtt</build_depend> 
  <build_depend>rtt_ros</build_depend> 
  <build_depend>std_msgs</build_depend> 
  <build_depend>gazebo</build_depend> 
  <build_depend>Boost</build_depend> 

  <run_depend>std_msgs</run_depend> 
  <run_depend>rtt</run_depend> 
  <run_depend>rtt_ros</run_depend> 
  <run_depend>rtt_rosnode</run_depend> 
  <run_depend>rtt_roscomm</run_depend> 
  <run_depend>rtt_rosparam</run_depend> 
  <run_depend>rtt_std_msgs</run_depend> 
  <run_depend>rtt_std_srvs</run_depend> 
  <run_depend>gazebo</run_depend> 
  <run_depend>Boost</run_depend> 

  <export>
    <rtt_ros>
      <plugin_depend>rtt_rosnode</plugin_depend>
      <plugin_depend>rtt_roscomm</plugin_depend>
      <plugin_depend>rtt_rosparam</plugin_depend>
      <plugin_depend>rtt_std_msgs</plugin_depend>
      <plugin_depend>rtt_std_srvs</plugin_depend>
    </rtt_ros>
  </export>

</package>